[tool.poetry]
name = "dexscreener"
version = "0.1.0"
description = ""
authors = ["hhhscvx <hhhscvx@yandex.ru>"]

[tool.poetry.dependencies]
python = "^3.11"
selenium = "^4.26.1"
webdriver-manager = "^4.0.2"
loguru = "^0.7.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
