[tool.poetry]
name = "dexscreener"
version = "0.1.0"
description = ""
authors = ["hhhscvx <hhhscvx@yandex.ru>"]

[tool.poetry.dependencies]
python = "^3.11"
loguru = "^0.7.2"
pydantic-settings = "^2.6.1"
requests = "^2.32.3"
beautifulsoup4 = "^4.12.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
